# KiwiScan

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  ws4010_monitor.html
outputs/: kiwiscan-v0.1.19-release-notes.md
prod_minimal/: README_PROD_MINIMAL.md  requirements.txt  run_server.sh
src/kiwi_scan/: __init__.py  (+22 more)
tests/: test_admin_api.py  test_auto_set_capacity.py  test_auto_set_prioritization.py  test_automation_settings.py  test_band_scan_api.py  test_band_scanner.py  test_bandplan_extra_segments.py  test_caption_api.py  test_caption_monitor.py  test_cw_decode.py  test_decodes_api.py  test_decodes_status.py  test_detect.py  test_fixed_roaming_assignments.py  test_health_api.py  test_kiwi_discovery.py  test_kiwi_waterfall.py  test_maidenhead.py  test_net_monitor.py  test_net_monitor_api.py  test_pro_dashboard_smoke.py  test_receiver_health.py  test_receiver_scan.py  test_receiver_scan_api.py  test_record.py  test_scan.py  test_scan_candidate_type.py  test_schedule_api.py  test_smart_scheduler_api.py  test_system_info.py  test_transcribe.py
tools/: build_macos_installer_pkg.sh  check_runtime_deps.sh  cleanup.py  container_healthcheck.py  install_healthcheck_launch_agent.sh  install_latest.command  install_latest.sh  kiwi_admin_kick.py  make_kiwi_scan_backup.py  publish_docker.sh  release_commit.sh  release_macos_pkg.sh  replay_raw.py  run_container_healthcheck.sh  run_udp_chain_test.py  show_band_status.py  test_iq_dual_mode.py  udp_count.py
(+70 files in other folders)
