[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwi-scan"
version = "0.1.11"
description = "KiWi SDR scanning/monitoring utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ShackMate" }]

dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
kiwi-scan = "kiwi_scan.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
